# Inventory

./: .envrc  .gitignore  .hlint.yaml  .projections.json  CHANGELOG.md  Inventory.cabal  LICENSE  README.md  flake.nix  hie.yaml  package.yaml  result-doc
.github/: CODEOWNERS
app/: Main.hs
src/: Inventory.hs
src/Inventory/: Database.hs
src/Inventory/Database/: Tables.hs  Utils.hs
src/Inventory/Database/Tables/: Items.hs  Locations.hs  Product.hs  Units.hs
